force-app/main/default/objects/EYI_FCM_Detail__c/EYI_FCM_Detail__c.object-meta.xml
<CustomObject>
    <label>FCM Detail</label>
    <nameField>
        <displayFormat>FCM-{0000}</displayFormat>
        <label>FCM Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCM Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>