force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_App_Version__c.field-meta.xml
<CustomField>
    <fullName>EYI_App_Version__c</fullName>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>