force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Custom_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Custom_Device_ID__c</fullName>
    <label>Custom Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>