force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Customer__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>