force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_FCM_ID_Action__c.field-meta.xml
<CustomField>
    <fullName>EYI_FCM_ID_Action__c</fullName>
    <label>FCM ID Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>