force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Login_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Login_Email_Id__c</fullName>
    <label>Login Email Id</label>
    <type>Email</type>
</CustomField>