force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Login_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Login_Mobile_No__c</fullName>
    <label>Login Mobile No</label>
    <type>Phone</type>
</CustomField>