force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Model__c.field-meta.xml
<CustomField>
    <fullName>EYI_Model__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>