force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>EYI_OS_Version__c</fullName>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>