force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>