force-app/main/default/objects/EYI_FCM_Detail__c/fields/EYI_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>